[tool.poetry]
name = "instrument"
version = "0.1.0"
description = ""
authors = ["Andrew Grosser <dioptre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
novation-launchpad = "^1.0.0"
numpy = "^1.24.0"
launchpad-py = "^0.9.1"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
